tests/test_data/CodeStructureSnippets/bad/sem_err_5.6.ifj21
require "ifj21"
global foo : function(integer,string) : string, integer
function foo(x : integer, y : string) : integer, integer
  local i : integer = 1
  local j : integer = 2

  return i, j           --bad navratovy typ
end

--main
function main()
    foo(1,"papa")

end
main()